# sniffster

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  agent_instructions.md  format-timestamps.py  main.cpp  run-tests.py
docs/: design.md  index.html  limitations.md  styles.css  usage.md
network/: addresses.cppm  config.cppm  nicq_detector.cppm  nicq_ethtool.cppm  nicq_fs.cppm  packet_offsets.h
platform/: arch_detect.cppm  arch_macros.h  clock.cppm  crc32_u64.hpp  debug.cppm  decorated_throw.cppm  platform.cppm
processors/: format_data.cppm  logger_event.cppm  logger_processor.cppm  packet_meta_event.cppm  packet_print.cppm  packet_processor.cppm  queue_processor.cppm
sniffer/: packet_handler.cppm  runtime_control.cppm  sniffer.cppm  threading_config.cppm  xdp_copy_handler.cppm  xdp_copy_mode.c  xdp_copy_mode_loader.cppm
tests/: CMakeLists.txt  clock_test.cppm  config_test.cpp  logger_processor_test.cpp  network_misc_test.cpp  packet_handler_test.cpp  packet_print_test.cpp  packet_processor_test.cpp  platform_test.cpp  queue_processor_test.cpp  runtime_control_test.cpp  sniffer_runtime_test.cpp  xdp_copy_mode_loader_test.cpp
tests/manual/: arch_bits.cpp  demo_decorated_errors.cpp  network_config.cpp  nic_detect_queues.cpp
